K8S - Individual Namespace/admin-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  admin-api
  namespace: admin
  labels:
    name: callbook
spec:
  replicas: 1
  selector:
    matchLabels:
      name: callbook
  template:
    metadata:
      labels:
        name: callbook
    spec:
      containers:
      - image: us-east1-docker.pkg.dev/kubernetes-389210/callbooking/admin-api
        name: admin-api
        resources:
          requests:
            cpu: "25m"
            memory: "125M"
          limits: 
            cpu: "50m"
            memory: "250M"  
        ports:
        - containerPort: 1005
        livenessProbe:
          httpGet:
            path: /api/health
            port: 1005
          initialDelaySeconds: 30
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          timeoutSeconds: 1  
        readinessProbe:
          httpGet:
            path: /api/health
            port: 1005
          initialDelaySeconds: 30
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          timeoutSeconds: 1
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
                - key: name
                  operator: In
                  values:
                    - callbook
            topologyKey: "kubernetes.io/hostname"
