K8S - Individual Namespace/admin-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-ui
  namespace: ui
  labels:
    name: callbook
spec:
  replicas: 1
  selector:
    matchLabels:
      name: callbook
  template:
    metadata:
      labels:
        name: callbook
    spec:
      containers:
      - image: us-east1-docker.pkg.dev/kubernetes-389210/callbooking/admin-ui
        #imagePullPolicy: IfNotPresent
        # command: [ "/bin/bash", "-c", "--" ]
        # args: [ "while true; do sleep 30; done;" ]
        name: admin-ui
        resources:
          requests:
            cpu: "200m"
            memory: "400Mi"
          limits: 
            cpu: "400m"
            memory: "800Mi"
        ports:
        - name: admin-ui-port
          containerPort: 3000
        # livenessProbe:
        #   httpGet:
        #     path: /health
        #     port: 3000
        #   initialDelaySeconds: 150
        #   periodSeconds: 20
        #   # successThreshold: 1
        #   # failureThreshold: 3
        #   # timeoutSeconds: 1  
        # readinessProbe:
        #   httpGet:
        #     path: /health
        #     port: 3000
        #   initialDelaySeconds: 170
        #   periodSeconds: 40
        #   # successThreshold: 1
        #   # failureThreshold: 3
        #   # timeoutSeconds: 1
