K8S - Individual Namespace/mongodb.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name:  mongo-db1
  namespace: db
  labels:
    name: callbook
spec:
  replicas: 1
  selector:
    matchLabels:
      name: callbook
  template:
    metadata:
      labels:
        name: callbook
    spec:
      containers:
      - image: mongo:4.2.24-bionic
        name: mongo-db
        resources:
          requests:
            cpu: "25m"
            memory: "125M"
          limits: 
            cpu: "50m"
            memory: "250M"  
        ports:
        - containerPort: 27017
