K8S - Individual Namespace/ui-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: user-ui
  namespace: db
  labels:
    name: callbook
spec:
  containers:
  - name: user-ui
    image: us-east1-docker.pkg.dev/kubernetes-389210/callbooking/user-ui:1.0
    resources:
      limits:
        cpu: 400m
        memory: 800Mi
      requests:
        cpu: 200m
        memory: 400Mi
    ports:
    - name: user-ui-port
      containerPort: 3000
    livenessProbe:
      httpGet:
        path: /health
        port: 8080
      initialDelaySeconds: 30
      periodSeconds: 5
      successThreshold: 1
      failureThreshold: 3
      timeoutSeconds: 1  
    readinessProbe:
      httpGet:
        path: /health
        port: 3000
      initialDelaySeconds: 30
      periodSeconds: 5
      successThreshold: 1
      failureThreshold: 3
      timeoutSeconds: 1
