K8S - Individual Namespace/user-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-ui-service
  namespace: ui
spec:
  type: ClusterIP
  selector:
    name: callbook
  ports:
  - name: user-ui-request
    port: 3001
    targetPort: 3000
