K8S - Individual Namespace/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: ui
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: user-ui-service
              port: 
                number: 3001
        - path: /admin
          pathType: Prefix
          backend:
            service:
              name: admin-ui-service
              port: 
                number: 3003
